--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-tiny",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -17,6 +17,7 @@
   "dependencies": {
     "commander": "^13.0.0",
     "crc": "^4.3.2",
+    "exiftool-vendored": "^34.0.0",
     "glob": "10.4.2",
     "lodash": "^4.17.21",
     "tinify": "^1.7.1"
